@@ -3,6 +3,10 @@ Changes in version 0.12
 
 STILL UNDER DEVELOPMENT; NOT RELEASED YET.
 
+* Improved 'kyua report --verbose' to properly handle environment
+  variables with continuation lines in them, and fixed the integration
+  tests for this command to avoid false negatives.
+
 * Fixed stacktrace gathering with FreeBSD's ancient version of GDB.
   GDB 6.1.1 (circa 2004) does not have the -ex flag so we need to
   generate a temporary GDB script and feed it to GDB with -x instead.
